[gd_scene load_steps=46 format=2]

[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_yellow_walk_with_gun_000.png" type="Texture" id=1]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_yellow_walk_with_gun_005.png" type="Texture" id=2]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_yellow_walk_with_gun_010.png" type="Texture" id=3]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_yellow_walk_with_gun_003.png" type="Texture" id=4]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_yellow_walk_with_gun_004.png" type="Texture" id=5]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_yellow_walk_with_gun_007.png" type="Texture" id=6]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_yellow_walk_with_gun_006.png" type="Texture" id=7]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_yellow_walk_with_gun_002.png" type="Texture" id=8]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_yellow_walk_with_gun_008.png" type="Texture" id=9]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_yellow_walk_with_gun_009.png" type="Texture" id=10]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_yellow_walk_with_gun_012.png" type="Texture" id=11]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_yellow_walk_with_gun_013.png" type="Texture" id=12]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_yellow_walk_with_gun_015.png" type="Texture" id=13]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_yellow_walk_with_gun_011.png" type="Texture" id=14]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_yellow_walk_with_gun_014.png" type="Texture" id=15]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_yellow_walk_with_gun_001.png" type="Texture" id=16]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_yellow_die_002.png" type="Texture" id=17]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_yellow_die_003.png" type="Texture" id=18]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_yellow_die_001.png" type="Texture" id=19]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_yellow_die_004.png" type="Texture" id=20]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_yellow_die_000.png" type="Texture" id=21]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_yellow_walk_shooting_000.png" type="Texture" id=27]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_yellow_walk_shooting_005.png" type="Texture" id=29]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_yellow_walk_shooting_006.png" type="Texture" id=35]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_yellow_walk_shooting_007.png" type="Texture" id=37]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_yellow_walk_shooting_009.png" type="Texture" id=38]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_yellow_walk_shooting_014.png" type="Texture" id=40]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_yellow_walk_shooting_008.png" type="Texture" id=41]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_yellow_walk_shooting_012.png" type="Texture" id=45]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_yellow_walk_shooting_011.png" type="Texture" id=46]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_yellow_walk_shooting_013.png" type="Texture" id=48]
[ext_resource path="res://UI/EnemyBar/EnemyBar.tscn" type="PackedScene" id=51]
[ext_resource path="res://Karakter/Boss_Enemy/gun_boss1.gd" type="Script" id=52]
[ext_resource path="res://Karakter/Boss_Enemy/Boss_1.gd" type="Script" id=53]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_yellow_walk_shooting_010.png" type="Texture" id=54]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_yellow_walk_shooting_015.png" type="Texture" id=55]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_yellow_walk_shooting_003.png" type="Texture" id=56]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_yellow_walk_shooting_001.png" type="Texture" id=57]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_yellow_walk_shooting_004.png" type="Texture" id=58]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_yellow_walk_shooting_002.png" type="Texture" id=59]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 27 ), ExtResource( 57 ), ExtResource( 59 ), ExtResource( 56 ), ExtResource( 58 ), ExtResource( 29 ), ExtResource( 35 ), ExtResource( 37 ), ExtResource( 41 ), ExtResource( 38 ), ExtResource( 54 ), ExtResource( 46 ), ExtResource( 45 ), ExtResource( 48 ), ExtResource( 40 ), ExtResource( 55 ) ],
"loop": true,
"name": "Attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 19 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 20 ) ],
"loop": true,
"name": "Dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 16 ), ExtResource( 8 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 2 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 3 ), ExtResource( 14 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 15 ), ExtResource( 13 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 103.372, 220.322 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 466.332, 46.2627 )

[sub_resource type="Animation" id=4]
resource_name = "HitAnim"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.00392157, 0.00392157, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 310, 40 )

[node name="Boss_1" type="KinematicBody2D"]
position = Vector2( 0, -48 )
scale = Vector2( 0.2, 0.2 )
collision_layer = 8
script = ExtResource( 53 )

[node name="FloorDetectorRight" type="RayCast2D" parent="."]
position = Vector2( 300, 0 )
scale = Vector2( 1, 1.247 )
enabled = true
cast_to = Vector2( 0, 155 )

[node name="FloorDetectorLeft" type="RayCast2D" parent="."]
position = Vector2( -86.6667, 0 )
scale = Vector2( 1, 1.247 )
enabled = true
cast_to = Vector2( 0, 155 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 121.951, -52.0833 )
frames = SubResource( 1 )
animation = "Idle"
playing = true

[node name="gun_boss" type="Position2D" parent="AnimatedSprite"]
position = Vector2( -295.284, 72.0834 )
script = ExtResource( 52 )

[node name="Cooldown" type="Timer" parent="AnimatedSprite/gun_boss"]
wait_time = 1.2
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 23.3715, -40.3217 )
shape = SubResource( 2 )

[node name="AreaAttack" type="Area2D" parent="."]
position = Vector2( 118.721, 42.1941 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaAttack"]
modulate = Color( 0.27451, 0.054902, 0.972549, 1 )
position = Vector2( -465.053, -22 )
shape = SubResource( 3 )

[node name="TimerAnimation" type="Timer" parent="."]
one_shot = true

[node name="EnemyHealth" parent="." instance=ExtResource( 51 )]
margin_left = -40.0
margin_top = -353.333
margin_right = 233.0
margin_bottom = -323.333

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/HitAnim = SubResource( 4 )

[node name="SpawnTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.5
one_shot = true

[node name="AreaBlind" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaBlind"]
position = Vector2( 300, 15 )
scale = Vector2( 0.999999, 0.999999 )
shape = SubResource( 5 )

[connection signal="body_entered" from="AreaAttack" to="." method="_on_AreaAttack_body_entered"]
[connection signal="body_exited" from="AreaAttack" to="." method="_on_AreaAttack_body_exited"]
[connection signal="body_entered" from="AreaBlind" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="AreaBlind" to="." method="_on_Area2D_body_exited"]
